--- a/base/etc/nginx/nginx.conf
+++ b/base/etc/nginx/nginx.conf
@@ -17,10 +17,19 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-log_format  main  '$remote_addr [$time_local] "$request" '
-                  '$status $body_bytes_sent "$http_referer" $request_time "$upstream_addr" $upstream_response_time '
-                  '"$http_user_agent" "$http_x_forwarded_for"';
-
+    # log_format  main  '$remote_addr [$time_local] "$request" '
+    #               '$status $body_bytes_sent "$http_referer" $request_time "$upstream_addr" $upstream_response_time '
+    #               '"$http_user_agent" "$http_x_forwarded_for"';
+    # 对日志格式化成json
+    log_format main '{"@timestamp":"$time_iso8601",'
+                    '"@version":1,'
+                    '"host":"$server_addr",'
+                    '"client":"$remote_addr",'
+                    '"size":$body_bytes_sent,'
+                    '"responsetime":$request_time,'
+                    '"domain":"$host",'
+                    '"url":"$uri",'
+                    '"status":"$status"}';
 
 
     access_log  /var/log/nginx/access.log  main;
