feat:logstash config

--- a/base/etc/logstash/logstash.conf
+++ b/base/etc/logstash/logstash.conf
@@ -4,6 +4,8 @@
 input {
   beats {
     port => 5044
+    codec => json
+    client_inactivity_timeout => 36000
   }
 }
 filter {
@@ -24,7 +26,7 @@ if 'nginx-access' in [tags]{
 }
 output {
   elasticsearch {
-    hosts => ["http://dm_elasticsearch_container:9200"]
+    hosts => ["elasticsearch:9200"]
     index => "wwfmac-nginx"
   }
 }
